--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap');
+:root {
+  --background: #303030;
+  --main: #303030
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html {
+  background-color: var(--background);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+  margin: 30px;
+  border-radius: 39px;
+  background: linear-gradient(145deg, #333333, #2b2b2b);
+  box-shadow: 26px 26px 51px #212121,
+    -26px -26px 51px #3f3f3f;
+  height: 50px;
+  width: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  margin: 30px;
+  border-radius: 50%;
+  background: linear-gradient(145deg, #045de9 0%,
+    #09c6f9 74%);
+  box-shadow: 15px 15px 30px #212121,
+      -15px -15px 30px #3f3f3f;
+  height: 50px;
+  width: 50px;
+}
+.navbar {
+  position: fixed;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+body,
+html {
+  font-family: 'Raleway', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
